pamc/src/tests/sample_code/should_fail/type_check/illegal_type/forall_param.ph
type U {
    .U: U,
}

let foo = forall(x: U.U) { U };
